Fix site title on mobile

--- a/_sass/leviathan/_layout.scss
+++ b/_sass/leviathan/_layout.scss
@@ -13,6 +13,8 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
+  max-height: 56px;
+  overflow: hidden;
 
   &,
   &:visited {
